[package]
name = "migrate_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_socketaddr = "0.2"
socket2 = "0.3.19"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.35"
features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper"]