[package]
name = "multipath_udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["cargo"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.34.0"
features = ["Win32_Networking_WinSock"]